--- a/index.html
+++ b/index.html
@@ -1,28 +1,60 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Notion HTML Embed</title>
-  <style>
-    body { margin: 0; padding: 10px; }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>HTML → Notion Embed Tool</title>
+<style>
+body { font-family: system-ui; margin: 40px; }
+textarea { width: 100%; height: 200px; }
+input { width: 100%; padding: 8px; }
+button { padding: 8px 16px; margin-top: 10px; }
+.preview { margin-top: 30px; border: 1px solid #ddd; padding: 20px; }
+</style>
 </head>
 <body>
 
-<div id="app"></div>
+<h2>HTML → Notion Embed Generator</h2>
+
+<textarea id="htmlInput" placeholder="Paste your HTML here"></textarea>
+<button onclick="generate()">Generate Embed Link</button>
+
+<h3>Embed URL</h3>
+<input id="output" readonly>
+<button onclick="copy()">Copy</button>
+
+<hr>
+
+<h3>Preview</h3>
+<div class="preview" id="preview"></div>
 
 <script>
-  const params = new URLSearchParams(window.location.search);
-  const encoded = params.get("c");
 
-  if (encoded) {
-    const decoded = decodeURIComponent(encoded);
-    document.getElementById("app").innerHTML = decoded;
-  } else {
-    document.getElementById("app").innerText =
-      "Missing content. Use ?c=ENCODED_HTML";
-  }
+function generate() {
+  const html = document.getElementById("htmlInput").value;
+  const encoded = encodeURIComponent(html);
+
+  const base = window.location.origin + window.location.pathname;
+  const finalURL = base + "?render=" + encoded;
+
+  document.getElementById("output").value = finalURL;
+  document.getElementById("preview").innerHTML = html;
+}
+
+function copy() {
+  const field = document.getElementById("output");
+  field.select();
+  document.execCommand("copy");
+}
+
+// Render mode
+const params = new URLSearchParams(window.location.search);
+const renderContent = params.get("render");
+
+if (renderContent) {
+  document.body.innerHTML = decodeURIComponent(renderContent);
+}
+
 </script>
 
 </body>
